FIX page width slightly wider than viewport
Page was slightly wider than viewport, despite style rule width:100vw applied to body. Issue traced to vertical scrollbars triggering horizontal scrollbars, which in turn added to the viewport width.

Solved by adding style rule max-width:100% to body.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,7 @@
 body {
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
   background-color: #FFF;
   display: flex;
   justify-content: center;
